	+ Show no data stored when there are no logs for a domain
	+ Log watcher is added in order to notify when an event has
	happened. You can configure which log watcher you may enable and
	what you want to be notify by a determined filter and/or event.
	+ RAID watcher is added to check the RAID events that may happen
	when the RAID subsystem is configured in the eBox machine
0.11
	+ Fix issue with multiple models and models with params.
	  This triggered a bug in DHCP when there was just one static
	  interface
	+ Fix _checkRowIsUnique and _checkFieldIsUnique 
	+ Fix paging 
	+ Trim long strings in log table, show tooltip with the whole string
	  and show links for URLs starting with "http://"
0.10.99
	+ Add disk usage information
	+ Show progress in backup process
	+ Add option to purge logs
	+ Create a link from /var/lib/ebox/log to /var/log/ebox
	+ Fix bug with backup descriptions containing spaces
	+ Add removeAll method on data models
	+ Add HostIP, DomainName and Port types
	+ Add readonly forms to display static information
	+ Add Danish translation thanks to Allan Jacobsen
0.10
	+ New release
0.9.100
	+ Add checking for SOAP session opened
	+ Add EventDaemon
	+ Add Watcher and Dispatch framework to support an event
	  architecture on eBox
	+ Add volatile EBox::Types in order not to store their values 
	  on GConf
	+ Add generic form
	+ Improvements on generic table
	+ Added Swedish translation

0.9.99
	+ Added Portuguese from Portugal translation
	+ Added Russian translation
	+ Bugfix: bad changed state in modules after restore

0.9.3
	+ New release

0.9.2
	+ Add browser warning when uploading files
	+ Enable/disable logging modules
0.9.1
	+ Fix backup issue with changed state
	+ Generic table supports custom ordering
0.9
	+ Added Polish translation
        + Bug in recognition of old CD-R writting devices fixed
	+ Added Aragonese translation
	+ Added Dutch translation
	+ Added German translation
	+ Added Portuguese translation

0.8.99