@@ -1,23 +1,29 @@
- <%args>
+<%doc>
+  This template is used to display the progress of the progress
+  indicator.
+</%doc>
+<%args>
 #$currentItemUrl
-
 $progressId
-
 $text   => ''
 $currentItemCaption => undef
 $itemsLeftMessage   => undef
 $endNote            => undef
-
-
+$errorNote          => undef
 $currentItemUrl => '/ebox/EBox/CurrentProgress'
 $reloadInterval  => 5;
 </%args>
 <%init>
 use EBox::Gettext;
+use EBox::ProgressIndicator;
 
 defined $currentItemCaption or $currentItemCaption = __('Item');
 defined $itemsLeftMessage   or $itemsLeftMessage   = __('items left');
 defined $endNote            or $endNote            = __('Done');
+defined $errorNote          or $errorNote = __('Some error has '
+                                               . 'happened in eBox. '
+                                               . 'Check the logs');
+my $progressIn = EBox::ProgressIndicator->retrieve($progressId);
 </%init>
 <script type="text/javascript" src="/data/js/prototype.js">//</script>
 <script type="text/javascript" src="/data/js/progress.js"></script>
@@ -25,8 +31,6 @@ defined $endNote            or $endNote            = __('Done');
 <script type="text/javascript">
     createPeriodicalExecuter(<% $progressId %>, '<% $currentItemUrl %>', <% $reloadInterval %>);
 </script>
-
-
 
 <div id='progressing'>
 <p> <% $text %> </p>
@@ -37,8 +41,11 @@ defined $endNote            or $endNote            = __('Done');
 <br/>
 </div>
 
-
 <br/>
-<div class ="note" id='done' style="display:none;">
+<div class ="note" id="done" style="display:none;">
 	 <p><% $endNote  %></p>
+</div>
+<div class="error" id="error-progress" style="display:none;">
+   <p><% $errorNote %></p>
+   <p id="error-progress-message"></p>
 </div>
